--- a/scss-&-css/style.css
+++ b/scss-&-css/style.css
@@ -11986,4 +11986,51 @@ fieldset:disabled .btn {
 #hero .type-block h2, #hero .type-block .h2 {
   font-weight: 400;
 }
+
+#hero #down-arrow {
+  position: relative;
+  top: 150px;
+  fill: #DEB64E;
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+}
+
+#menu_wrapper {
+  background-color: #183C28;
+}
+
+.bounce {
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+
+@-webkit-keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  40% {
+    -webkit-transform: translateY(-30px);
+            transform: translateY(-30px);
+  }
+  60% {
+    -webkit-transform: translateY(-15px);
+            transform: translateY(-15px);
+  }
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+  40% {
+    -webkit-transform: translateY(-30px);
+            transform: translateY(-30px);
+  }
+  60% {
+    -webkit-transform: translateY(-15px);
+            transform: translateY(-15px);
+  }
+}
 /*# sourceMappingURL=style.css.map */
