--- a/scss-&-css/style.css
+++ b/scss-&-css/style.css
@@ -11971,8 +11971,8 @@ fieldset:disabled .btn {
 }
 
 #hero_wrapper {
-  background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3))), -webkit-gradient(linear, left bottom, left top, from(#183c28), to(rgba(24, 60, 40, 0))), url("../assets/foto/template-background.jpg");
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), linear-gradient(to top, #183c28, rgba(24, 60, 40, 0)), url("../assets/foto/template-background.jpg");
+  background: -webkit-gradient(linear, left bottom, left top, from(#183c28), to(rgba(24, 60, 40, 0.25))), -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3))), url("../assets/foto/template-background.jpg");
+  background: linear-gradient(to top, #183c28, rgba(24, 60, 40, 0.25)), linear-gradient(to top, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../assets/foto/template-background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -12005,7 +12005,11 @@ fieldset:disabled .btn {
 }
 
 @-webkit-keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
     -webkit-transform: translateY(0);
             transform: translateY(0);
   }
@@ -12020,7 +12024,11 @@ fieldset:disabled .btn {
 }
 
 @keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
     -webkit-transform: translateY(0);
             transform: translateY(0);
   }
