--- a/scss-&-css/style.scss
+++ b/scss-&-css/style.scss
@@ -34,8 +34,8 @@ $btn-padding-y: 1em;
 
 #hero_wrapper {
     background:
+        linear-gradient(to top, rgba(24, 60, 40, 1), rgba(24, 60, 40, .25)),
         linear-gradient(to top, rgba(0, 0, 0, .3), rgba(0, 0, 0, .3)),
-        linear-gradient(to top, rgba(24, 60, 40, 1), rgba(24, 60, 40, 0)),
         url("../assets/foto/template-background.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -71,9 +71,9 @@ $btn-padding-y: 1em;
 #menu_wrapper {
     background-color: $primary;
 }
-#menu {
-    
-}
+
+#menu {}
+
 // ::::: MENU SECTION :::::
 
 // ::::: ANIMATIONS :::::
@@ -84,14 +84,22 @@ $btn-padding-y: 1em;
 }
 
 @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-      transform: translateY(0);
+
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+        transform: translateY(0);
     }
+
     40% {
-      transform: translateY(-30px);
+        transform: translateY(-30px);
     }
+
     60% {
-      transform: translateY(-15px);
+        transform: translateY(-15px);
     }
-  }
+}
+
 // ::::: ANIMATIONS :::::
