--- a/scss-&-css/style.scss
+++ b/scss-&-css/style.scss
@@ -84,6 +84,7 @@ $input-focus-border-color: $secondary-300;
         display: none;
         position: absolute;
         left: 10vw;
+        top: 300px;
         @media (min-width: 992px) {
             display: flex;
         }
@@ -123,11 +124,14 @@ $input-focus-border-color: $secondary-300;
 
 #about-us {
     .type-block {
-        text-transform: uppercase;
+        // text-transform: uppercase;
 
         #long-arrow {
             fill: $secondary;
         }
+    }
+    #floating-pictogram_1_wrapper {
+        position: absolute;
     }
 }
 
