--- a/scss-&-css/style.css
+++ b/scss-&-css/style.css
@@ -1,3 +1,20 @@
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -11999,7 +12016,7 @@ fieldset:disabled .btn {
   display: none;
   position: absolute;
   left: 10vw;
-  top: 300px;
+  top: 20vh;
 }
 
 @media (min-width: 992px) {
